// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterSelector Rendering renders checked filter 1`] = `
<FilterCheckbox
  checked={true}
  count={10}
  id="filter-selector-SELECTED"
  indeterminate={false}
  labelText="Selected filter"
  onChange={[Function]}
/>
`;

exports[`FilterSelector Rendering renders unchecked filter 1`] = `
<FilterCheckbox
  checked={false}
  count={10}
  id="filter-selector-DEFAULT"
  indeterminate={false}
  labelText="Filter"
  onChange={[Function]}
/>
`;
